ai-governance-dashboard/jhb-streampulse/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jhb-streampulse
  namespace: jhb-streampulse
  labels:
    app: jhb-streampulse
  annotations:
    cloud.google.com/backend-config: '{"default": "jhb-streampulse-backendconfig"}'
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: jhb-streampulse
